# CubicSpline3D

./: .gitignore  CubicSpline3D.cabal  LICENSE  README.md
examples/: Main.hs  example-2d-xy.hs  example-3d-parametric.hs
src/Math/: CubicSpline3D.hs
