name:                CubicSpline3D
version:             0.1.0.0
synopsis:            Parametric cubic spline interpolation
description:         Please see README.md
homepage:            https://github.com/fujiisat/CubicSpline3D#readme
license:             BSD3
license-file:        LICENSE
author:              FUJII Satoshi
maintainer:          fujiisat@gmail.com
copyright:           2016 Fujii Satoshi
category:            Math
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Math.CubicSpline3D
  build-depends:       base
                     , vector
                     , bytestring
                     , linear
  ghc-options:          -O2 -fllvm
  default-language:    Haskell2010

executable example-3d-parametric
  hs-source-dirs:      examples
  main-is:             example-3d-parametric.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N  -O2 -fllvm
  build-depends:       base
                     , vector
                     , linear
                     , bytestring
                     , CubicSpline3D
  default-language:    Haskell2010

executable example-2d-xy
  hs-source-dirs:      examples
  main-is:             example-2d-xy.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N  -O2 -fllvm
  build-depends:       base
                     , vector
                     , linear
                     , bytestring
                     , CubicSpline3D
  default-language:    Haskell2010

test-suite CubicSpline-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , CubicSpline3D
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/fujiisat/CubicSpline3D
